--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -20,15 +20,15 @@
 }
 
 .large {
-  width: 100px;
-  height: 200px;
+  width: 110px;
+  height: 220px;
   font-size: 15px;
   color: #CCCCCC;
 }
 
 .small {
-  width: 50px;
-  height: 100px;
+  width: 55px;
+  height: 110px;
   font-size: 10px;
   color: #CCCCCC;
 }
